--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				Towards Minimal Causal Representations for Human Multimodal Language Understanding      
 			</span><br>
             <i>Under Review</i><br>
-			[<a href="https://arxiv.org/abs/2509.21805">Paper</a>]  
+			[<a href="https://arxiv.org/abs/2509.21805">arXiv</a>]  
 			[Code]
         </li>
 		
@@ -94,7 +94,7 @@
 				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis         
 			</span><br>
             <i>Under Review</i><br>
-            [<a href="https://arxiv.org/abs/2508.04999">Paper</a>]  
+            [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
 			[Code]
         </li>
     </ul>
@@ -110,7 +110,7 @@
 				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
 			</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
-            [Paper]
+            [<a href="https://doi.org/10.3233/FAIA250891">Paper</a>] 
 			[<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
         </li>
         
@@ -120,7 +120,7 @@
 				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
 			</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
-            [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
+            [<a href="https://doi.org/10.1007/978-981-95-0215-8_10">Paper</a>]  
             [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
         </li>
     </ul>
@@ -135,7 +135,7 @@
 				RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
 			</span><br>
 			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>)</i><br>
-			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
+			[<a href="https://doi.org/10.1109/CSCWD61410.2024.10580189">Paper</a>] 
 			[<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
         </li>
     </ul>
