--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 			<span style="color: gray;">
 				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
 			</span><br>
-            <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
+            <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>)</i><br>
             [<a href="https://doi.org/10.3233/FAIA250891">Paper</a>] 
-			[<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
+			[<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>], <b><font color="blue">CCF-B</font></b>
         </li>
         
         <li>
@@ -119,9 +119,9 @@
 			<span style="color: gray;">
 				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
 			</span><br>
-            <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
+            <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>)</i><br>
             [<a href="https://doi.org/10.1007/978-981-95-0215-8_10">Paper</a>]  
-            [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>]
+            [<a href="https://github.com/jmhmaxsat/HistLS">Code</a>], <b><font color="blue">CCF-B</font></b>
         </li>
     </ul>
     
