--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <section id="honors">
     <h2>Selected Awards and Honors</h2>
     <ul>
-		<li>National Scholarship for Master's Students, 2024-2025<br>
+		<li>National Scholarship for Master's Students, 2024<br>
 			(硕士研究生国家奖学金, <b><font color="red">Top 2%</font></b> in South China Normal University)
 		</li>   
 		<li>Supported by the Scientific Research Innovation Project of Graduate School of South China Normal University, 2024.5-2025.5<br>
