--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     <h2>News</h2>
     <div class="news-container">
         <ul class="news-list">
-		<li>[2025.7] One paper is accepted by ECAI 2025</li>
-            	<li>[2025.5] One paper is accepted by COCOON 2025</li>
+			<li>[2025.7] One paper is rejected by AAAI 2026...</li>
+			<li>[2025.7] One paper is accepted by ECAI 2025!</li>
+            <li>[2025.5] One paper is accepted by COCOON 2025!</li>
         </ul>
     </div>
 </section>
