--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
     <h2>News</h2>
     <div class="news-container">
         <ul class="news-list">
-			<li>[2025.11] One paper is <span style="color: red;">rejected</span> by AAAI 2026</li>
-			<li>[2025.07] One paper is <span style="color: green;">accepted</span> by ECAI 2025</li>
-            <li>[2025.05] One paper is <span style="color: green;">accepted</span> by COCOON 2025</li>
+			<li>[2025.07] One paper is accepted by ECAI 2025</li>
+            <li>[2025.05] One paper is accepted by COCOON 2025</li>
         </ul>
     </div>
 </section>
