--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 <section id="competitions">
     <h2>Competition Awards </h2>
     <ul>
-        <li>Runner-up in the Unweighted Anytime Track, MaxSAT Evaluation 2024</li>
-        <li>Third place in the Weighted Anytime Track, MaxSAT Evaluation 2024</li>
+        <li>🥈 Runner-up in the Unweighted Anytime Track, MaxSAT Evaluation 2024</li>
+        <li>🥉 Third place in the Weighted Anytime Track, MaxSAT Evaluation 2024</li>
 	<li>...</li>
     </ul>
 </section>
