--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
 <body>
 	
 <!-- Header Section -->
-<header id="header">
+<div id="header-container">
+    <div id="header-text">
+        <h1>Menghua Jiang (蒋梦华)</h1>
+        <h3>Master's student</h3>
+        <p>
+            School of Computer Science, South China Normal University<br>
+            Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
+            <a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a> 
+            <a href="https://github.com/jmhmaxsat">[Github]</a>
+        </p>
+    </div>
+    <div id="profile-picture">
+        <img src="image/jmh.jpg" alt="Menghua Jiang">
+    </div>
+</div>
+
+<!-- <header id="header">
     <div id="header-container">
 <!--         <div id="profile-picture">
             <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
@@ -36,7 +52,7 @@
             </p>
         </div>
     </div>
-</header>
+</header> -->
 
 
 <!-- Short Bio Section -->
