--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <h2>News</h2>
     <div class="news-container">
         <ul class="news-list">
-			<li>[2025.07] One paper is accepted by ECAI 2025</li>
-            <li>[2025.05] One paper is accepted by COCOON 2025</li>
+			<li>[2025.07] One paper on MaxSAT is accepted by ECAI 2025</li>
+            <li>[2025.05] One paper on MaxSAT is accepted by COCOON 2025</li>
         </ul>
     </div>
 </section>
