--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <a href="https://github.com/jmhmaxsat">[Github]</a>
             </p>
         </div>
+	 <td>
+    		<img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
+    </td>
     </div>
 </header>
 
