--- a/index.html
+++ b/index.html
@@ -18,8 +18,34 @@
 </head>
 
 <body>
-	
+
 <!-- Header Section -->
+<header id="header">
+    <table>
+        <tbody>
+            <tr>
+                <td width="670" style="vertical-align: top;">
+                    <div id="header-text">
+                        <h1>Menghua Jiang (蒋梦华)</h1>
+                        <h3>Master's student</h3>
+                        <p>
+                            School of Computer Science, South China Normal University<br>
+                            Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
+                            <a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a> 
+                            <a href="https://github.com/jmhmaxsat">[Github]</a>
+                        </p>
+                    </div>
+                </td>
+                <td style="vertical-align: top; padding-left: 20px;">
+                    <div id="profile-picture">
+                        <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</header>	
+<!-- <!-- Header Section -->
 <header id="header">
     <div id="header-container">
         <div id="profile-picture">
@@ -36,7 +62,7 @@
             </p>
         </div>
     </div>
-</header>
+</header> -->
 
 
 <!-- Short Bio Section -->
