--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
         </tbody>
     </table>
 </header>	
-<!-- <!-- Header Section -->
-<header id="header">
+	
+<!-- Header Section -->
+<!-- <header id="header">
     <div id="header-container">
         <div id="profile-picture">
             <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
