--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </p>
                     </div>
                 </td>
-                <td style="vertical-align: top; padding-left: 30px;">
+                <td style="vertical-align: middle; padding-left: 40px; padding-top: 20px;">
                     <div id="profile-picture">
                         <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="120">
                     </div>
