--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <!-- Header Section -->
-<header id="header">
+<!-- <header id="header">
     <table>
         <tbody>
             <tr>
@@ -44,14 +44,11 @@
             </tr>
         </tbody>
     </table>
-</header>	
+</header>	 -->
 	
-<!-- Header Section -->
+Header Section -->
 <!-- <header id="header">
     <div id="header-container">
-        <div id="profile-picture">
-            <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
-        </div>
         <div id="header-text">
             <h1>Menghua Jiang (蒋梦华)</h1>
             <h3>Master's student</h3>
@@ -63,7 +60,7 @@
             </p>
         </div>
     </div>
-</header> -->
+</header>
 
 
 <!-- Short Bio Section -->
