--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </table>
 </header>	 -->
 	
-Header Section -->
-<!-- <header id="header">
+<!-- Header Section -->
+<header id="header">
     <div id="header-container">
         <div id="header-text">
             <h1>Menghua Jiang (蒋梦华)</h1>
