--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <td width="670" style="vertical-align: top;">
                     <div id="header-text">
                         <h1>Menghua Jiang (蒋梦华)</h1>
-                        <h3>Master's student</h3>
+                        <h3>Ph.D. Student</h3>
                         <p>
                             School of Computer Science, South China Normal University<br>
                             Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
@@ -86,7 +86,7 @@
     <h2>News</h2>
     <div class="news-container">
         <ul class="news-list">
-			<li>[2025.12] I have been admitted as a PhD student at Sun Yat-sen University</li>
+			<li>[2025.12] I have been admitted as a Ph.D. student at Sun Yat-sen University</li>
 			<li>[2025.07] One paper on MaxSAT is accepted by ECAI 2025</li>
             <li>[2025.05] One paper on MaxSAT is accepted by COCOON 2025</li>
         </ul>
