--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <div id="header-container">
         <div id="header-text">
             <h1>Menghua Jiang (蒋梦华)</h1>
-            <h3>Master's student</h3>
+            <h3>Ph.D. student</h3>
             <p>
-                School of Computer Science, South China Normal University<br>
+                School of Computer Science and Engineering, Sun Yat-sen University<br>
                 Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
                 <a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a> 
                 <a href="https://github.com/jmhmaxsat">[Github]</a>
@@ -67,7 +67,7 @@
 <section id="short-bio">
     <h2>Short Bio</h2>
    	<p>
-    I am currently a Research Assistant, fortunately advised by 
+    I am an incoming Ph.D. student at Sun Yat-sen University, fortunately advised by 
     <a href="https://scholar.google.com/citations?user=pLHqgLIAAAAJ&hl=zh-CN&oi=ao" target="_blank">Prof. Sijie Mai</a>. 
     Previously, I received my Master’s degree in Computer Science from the 
     <a href="http://cs.scnu.edu.cn/" target="_blank">School of Computer Science</a>, 
