--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 <section id="short-bio">
     <h2>Short Bio</h2>
    	<p>
-    I am an incoming Ph.D. student at Sun Yat-sen University, fortunately advised by 
-    <a href="https://scholar.google.com/citations?user=pLHqgLIAAAAJ&hl=zh-CN&oi=ao" target="_blank">Prof. Sijie Mai</a>. 
+	I am an incoming PhD student at <a href="https://www.sysu.edu.cn/" target="_blank">Sun Yat-sen University</a>, and I am fortunate to be advised by 
+	<a href="https://scholar.google.com/citations?hl=zh-CN&user=M2_BYXgAAAAJ&view_op=list_works" target="_blank">Prof. Xiangui Kang</a> and
+	<a href="https://scholar.google.com/citations?user=pLHqgLIAAAAJ&hl=zh-CN&oi=ao" target="_blank">Prof. Sijie Mai</a>.
     Previously, I received my Master’s degree in Computer Science from the 
     <a href="http://cs.scnu.edu.cn/" target="_blank">School of Computer Science</a>, 
     <a href="https://www.scnu.edu.cn/" target="_blank">South China Normal University</a> in 2025, 
