--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="header-container">
         <div id="header-text">
             <h1>Menghua Jiang (蒋梦华)</h1>
-            <h3>Ph.D. student</h3>
+            <h3>Ph.D. Student</h3>
             <p>
                 School of Computer Science and Engineering, Sun Yat-sen University<br>
                 Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
@@ -67,7 +67,7 @@
 <section id="short-bio">
     <h2>Short Bio</h2>
    	<p>
-	I am an incoming PhD student at <a href="https://www.sysu.edu.cn/" target="_blank">Sun Yat-sen University</a>, and I am fortunate to be advised by 
+	I am an incoming Ph.D. student at <a href="https://www.sysu.edu.cn/" target="_blank">Sun Yat-sen University</a>, and I am fortunate to be advised by 
 	<a href="https://scholar.google.com/citations?hl=zh-CN&user=M2_BYXgAAAAJ&view_op=list_works" target="_blank">Prof. Xiangui Kang</a> and
 	<a href="https://scholar.google.com/citations?user=pLHqgLIAAAAJ&hl=zh-CN&oi=ao" target="_blank">Prof. Sijie Mai</a>.
     Previously, I received my Master’s degree in Computer Science from the 
@@ -194,7 +194,7 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-Last update: 10/2025 by Menghua Jiang.
+Last update: 12/2025 by Menghua Jiang.
 
 </body>
 </html>
