--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 <body>
 
 <!-- Header Section -->
-<!-- <header id="header">
+<header id="header">
     <table>
         <tbody>
             <tr>
                 <td width="670" style="vertical-align: top;">
                     <div id="header-text">
                         <h1>Menghua Jiang (蒋梦华)</h1>
+						<img style="max-width:30%" alt="logo" src="images/sysu_logo.jpg" class="hoverZoomLink">
                         <h3>Ph.D. Student</h3>
                         <p>
                             School of Computer Science, South China Normal University<br>
@@ -44,10 +45,10 @@
             </tr>
         </tbody>
     </table>
-</header>	 -->
+</header>	
 	
 <!-- Header Section -->
-<header id="header">
+<!-- <header id="header">
     <div id="header-container">
         <div id="header-text">
             <h1>Menghua Jiang (蒋梦华)</h1>
@@ -60,7 +61,7 @@
             </p>
         </div>
     </div>
-</header>
+</header> -->
 
 
 <!-- Short Bio Section -->
