--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <td width="670" style="vertical-align: top;">
                     <div id="header-text">
                         <h1>Menghua Jiang (蒋梦华)</h1>
-						<img style="max-width:30%" alt="logo" src="images/sysu_logo.jpg" class="hoverZoomLink">
+						<img style="max-width:30%" alt="logo" src="image/sysu_logo.jpg" class="hoverZoomLink">
                         <h3>Ph.D. Student</h3>
                         <p>
-                            School of Computer Science, South China Normal University<br>
+                            School of Computer Science and Engineering, Sun Yat-sen University<br>
                             Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
                             <a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a> 
                             <a href="https://github.com/jmhmaxsat">[Github]</a>
