--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <td width="670" style="vertical-align: top;">
                     <div id="header-text">
                         <h1>Menghua Jiang (蒋梦华)</h1>
-						<img style="max-width:30%" alt="logo" src="image/sysu_logo.jpg" class="hoverZoomLink">
+						<img style="max-width:30%" alt="logo" src="image/sysu_logo.png" class="hoverZoomLink">
                         <h3>Ph.D. Student</h3>
                         <p>
                             School of Computer Science and Engineering, Sun Yat-sen University<br>
