--- a/index.html
+++ b/index.html
@@ -18,9 +18,35 @@
 </head>
 
 <body>
+<div id="layout-content" style="margin-top:25px"></div>
 
+<table>
+    <tbody>
+        <tr>
+            <td width="670">
+                <div id="toptitle">
+                    <h1>Menghua Jiang (蒋梦华)</h1>
+                </div>
+                <img style="max-width: 30%" alt="logo" src="image/sysu_logo.png" class="hoverZoomLink">
+                <h3>Ph.D. Student</h3>
+                <p>
+                    School of Computer Science and Engineering, Sun Yat-sen University<br>
+                    Email: <br>
+                    <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
+                    <a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a>
+                    <a href="https://github.com/jmhmaxsat">[Github]</a>
+                </p>
+            </td>
+            <td style="vertical-align: top; padding-left: 20px;">
+                <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+	
 <!-- Header Section -->
-<header id="header">
+<!-- <header id="header">
     <table>
         <tbody>
             <tr>
@@ -45,7 +71,7 @@
             </tr>
         </tbody>
     </table>
-</header>	
+</header>	 -->
 	
 <!-- Header Section -->
 <!-- <header id="header">
