--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     <a href="https://github.com/jmhmaxsat">[Github]</a>
                 </p>
             </td>
-            <td style="vertical-align: top; padding-left: 20px;">
-                <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
+            	<img src="image/jmh.jpg" border="0" width="150">
             </td>
         </tr>
     </tbody>
