--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                     <a href="https://github.com/jmhmaxsat">[Github]</a>
                 </p>
             </td>
-            	<img src="image/jmh.jpg" border="0" width="150">
+            	<td style="vertical-align: middle; padding-left: 100px; padding-top: 80px;">
+                <img src="image/jmh.jpg" alt="Menghua Jiang" border="0" width="150">
             </td>
         </tr>
     </tbody>
