--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <div id="toptitle">
                     <h1>Menghua Jiang (蒋梦华)</h1>
                 </div>
-                <img style="max-width: 30%" alt="suda_logo" src="image/suda_logo.jpg" class="hoverZoomLink">&nbsp;
-				<img style="max-width: 30%" alt="scnu_logo" src="image/scnu_logo.png" class="hoverZoomLink">&nbsp;
-				<img style="max-width: 30%" alt="sysu_logo" src="image/sysu_logo.png" class="hoverZoomLink">
+                <img style="max-width: 30%; margin-right: 10px;" alt="suda_logo" src="image/suda_logo.jpg" class="hoverZoomLink">
+				<img style="max-width: 30%; margin-right: 10px;" alt="scnu_logo" src="image/scnu_logo.png" class="hoverZoomLink">
+				<img style="max-width: 30%;" alt="sysu_logo" src="image/sysu_logo.png" class="hoverZoomLink">
                 <h3>Ph.D. Student</h3>
                 <p>
                     School of Computer Science and Engineering, Sun Yat-sen University<br>
