--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <h3>Ph.D. Student</h3>
                 <p>
                     School of Computer Science and Engineering, Sun Yat-sen University<br>
-                    Email: <br>
-                    <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
+                    Email: <a href="mailto:jiangmenghua@m.scnu.edu.cn">jiangmenghua@m.scnu.edu.cn</a><br>
                     <a href="https://scholar.google.com/citations?user=6rn8tzsAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a>
                     <a href="https://github.com/jmhmaxsat">[Github]</a>
                 </p>
