--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <section id="short-bio">
     <h2>Short Bio</h2>
    	<p>
-	I am an incoming Ph.D. student at <a href="https://www.sysu.edu.cn/" target="_blank">Sun Yat-sen University</a>, advised by 
+	I am an incoming Ph.D. student at <a href="https://www.sysu.edu.cn/" target="_blank">Sun Yat-sen University</a>, supervised by 
 	<a href="https://scholar.google.com/citations?hl=zh-CN&user=M2_BYXgAAAAJ&view_op=list_works" target="_blank">Prof. Xiangui Kang</a> and
 	<a href="https://scholar.google.com/citations?user=pLHqgLIAAAAJ&hl=zh-CN&oi=ao" target="_blank">Prof. Sijie Mai</a>.
     Previously, I received my Master’s degree in Computer Science from the 
