--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 	
 
-<!-- Competitions and Awards -->
+<!-- Competitions Awards -->
 <section id="competitions">
     <h2>Competition Awards </h2>
     <ul>
