--- a/index.html
+++ b/index.html
@@ -162,10 +162,15 @@
     <h3 style="color: gray;">2025</h3>
     <ul>
 		<li>
-			<b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
+			<!-- <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
 			<span style="color: gray;">
 				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
 			</span><br>
+            <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
+            [<a href="https://doi.org/10.3233/FAIA250891">Paper</a>] 
+			[<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>] -->
+			Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
+			<b>Menghua Jiang</b>, <span style="color: gray;">Haokai Gao, Shuhao Chen, Yin Chen*</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://doi.org/10.3233/FAIA250891">Paper</a>] 
 			[<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
